# autre_api

./: .env  Cargo.toml
.github/workflows/: general.yml
migrations/: 20230219205615_create_subscriptions_table.sql
scripts/: init_db.sh  init_db_local.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: greet.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
